[package]
name = "managed-heap"
version = "0.1.2"
authors = ["Funkschy <felixschoeller@outlook.de>"]
edition = "2018"
license = "MIT"

description = """
An implementation of a virtual heap, inspired by VMs like the JVM.
Currently supports automatic garbage collection, but no defragmentation.
"""
readme = "README.md"
keywords = ["heap", "automatic", "garbage-collector", "gc", "vm"]
repository = "https://github.com/funkschy/managed-heap"
documentation = "https://docs.rs/managed-heap"

[dependencies]
